--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="js/index.js"></script>
   <!-- add idb.js to html page -->
-  <script src="./js/idb.js"></script>
+  <script src="js/idb.js"></script>
 </body>
 <!-- register the service worker -->
 <script>
